--- a/final_project.html
+++ b/final_project.html
@@ -129,12 +129,12 @@ $(document).ready(function () {
 
 
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages ------------------------------------------------------------------------- tidyverse 1.2.1 --</code></pre>
+<pre><code>## -- Attaching packages ----------------------------------------- tidyverse 1.2.1 --</code></pre>
 <pre><code>## v ggplot2 3.0.0     v purrr   0.2.5
 ## v tibble  1.4.2     v dplyr   0.7.8
 ## v tidyr   0.8.1     v stringr 1.3.1
 ## v readr   1.1.1     v forcats 0.3.0</code></pre>
-<pre><code>## -- Conflicts ---------------------------------------------------------------------------- tidyverse_conflicts() --
+<pre><code>## -- Conflicts -------------------------------------------- tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(readxl)</code></pre>
@@ -320,6 +320,16 @@ hate_crime =
   filter(participating_state != &quot;Total&quot;)%&gt;%
   select(year = year, state = participating_state, population = population_covered, total_incident = total_number_of_incidents_reported)%&gt;%
   mutate(annualprop = total_incident/population*100000)</code></pre>
+<div id="do-the-further-cleaning-of-the-merge-data" class="section level2">
+<h2>do the further cleaning of the merge data</h2>
+<pre class="r"><code>merge_data = merge_data%&gt;%
+  mutate(median_annual_household_income = str_replace(median_annual_household_income, &quot;,&quot;, &quot;&quot;))%&gt;%
+  mutate(median_annual_household_income = gsub(&quot;\\$&quot;, &quot;&quot;,median_annual_household_income ))%&gt;%
+mutate(median_annual_household_income = as.numeric(median_annual_household_income))</code></pre>
+</div>
+<div id="section" class="section level2">
+<h2></h2>
+</div>
 
 
 
